cf_analysis_results/checkerframework_3.42.0_results/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8.txt
../dataset/june2020_dataset/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/chemistry/MoleculeWriter.java:16: error: (required.method.not.called) $$ 4 $$ method close $$ new FileOutputStream(file) $$ java.io.FileOutputStream $$ regular method exit $$ ( 435, 461 ) $$ @MustCall method close may not have been invoked on new FileOutputStream(file) or any of its aliases.
            writeToStream(new FileOutputStream(file), molecule);
                          ^
  The type of object is: java.io.FileOutputStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/chemistry/LargeMoleculeTest.java:211: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(file) $$ java.io.FileReader $$ possible exceptional exit due to reader.readLine() with exception type java.io.IOException $$ ( 7172, 7192 ) $$ @MustCall method close may not have been invoked on new FileReader(file) or any of its aliases.
        BufferedReader reader = new BufferedReader(new FileReader(file));
                                                   ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to reader.readLine() with exception type java.io.IOException
../dataset/june2020_dataset/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/chemistry/LargeMoleculeTest.java:227: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(file) $$ java.io.FileReader $$ possible exceptional exit due to reader.readLine() with exception type java.io.IOException $$ ( 7782, 7802 ) $$ @MustCall method close may not have been invoked on new FileReader(file) or any of its aliases.
        BufferedReader reader = new BufferedReader(new FileReader(file));
                                                   ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to reader.readLine() with exception type java.io.IOException
../dataset/june2020_dataset/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/chemistry/MoleculeReader.java:22: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(file) $$ java.io.FileReader $$ possible exceptional exit due to reader.readLine() with exception type java.io.IOException $$ ( 605, 625 ) $$ @MustCall method close may not have been invoked on new FileReader(file) or any of its aliases.
            BufferedReader reader = new BufferedReader(new FileReader(file));
                                                       ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to reader.readLine() with exception type java.io.IOException
../dataset/june2020_dataset/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/chemistry/MoleculeReader.java:48: error: (required.method.not.called) $$ 4 $$ method close $$ new FileInputStream(file) $$ java.io.FileInputStream $$ regular method exit $$ ( 1371, 1396 ) $$ @MustCall method close may not have been invoked on new FileInputStream(file) or any of its aliases.
            return readSDFfromStream(new FileInputStream(file));
                                     ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: regular method exit
5 errors
